<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_feedback"
        android:title="@string/menu_feedback"
        android:icon="@drawable/ic_feedback"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_about"
        android:title="@string/menu_about"
        android:icon="@drawable/ic_info"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_settings"
        android:title="@string/menu_settings"
        android:icon="@drawable/ic_settings"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_privacy_policy"
        android:title="@string/menu_privacy_policy"
        android:icon="@drawable/ic_privacy"
        app:showAsAction="never" />

</menu>
