<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/nav_home">

    <!-- Home Fragment -->
    <fragment
        android:id="@+id/nav_home"
        android:name="ch.heuscher.ad2cause.ui.screens.HomeFragment"
        android:label="@string/home_tab_label"
        tools:layout="@layout/fragment_home" />

    <!-- Causes Fragment -->
    <fragment
        android:id="@+id/nav_causes"
        android:name="ch.heuscher.ad2cause.ui.screens.CausesFragment"
        android:label="@string/causes_tab_label"
        tools:layout="@layout/fragment_causes">

        <action
            android:id="@+id/action_causes_to_detail"
            app:destination="@id/cause_detail_fragment" />

        <action
            android:id="@+id/action_causes_to_request"
            app:destination="@id/request_cause_fragment" />
    </fragment>

    <!-- Request Cause Fragment -->
    <fragment
        android:id="@+id/request_cause_fragment"
        android:name="ch.heuscher.ad2cause.ui.screens.RequestCauseFragment"
        android:label="@string/add_new_cause_title"
        tools:layout="@layout/fragment_request_cause" />

    <!-- Cause Detail Fragment -->
    <fragment
        android:id="@+id/cause_detail_fragment"
        android:name="ch.heuscher.ad2cause.ui.screens.CauseDetailFragment"
        android:label="@string/app_name"
        tools:layout="@layout/fragment_cause_detail">
        
        <action
            android:id="@+id/action_detail_to_home"
            app:destination="@id/nav_home"
            app:popUpTo="@id/nav_home"
            app:popUpToInclusive="true" />
    </fragment>

    <!-- Stats Fragment -->
    <fragment
        android:id="@+id/nav_stats"
        android:name="ch.heuscher.ad2cause.ui.screens.StatsFragment"
        android:label="@string/stats_tab_label"
        tools:layout="@layout/fragment_stats" />

    <!-- Privacy Policy Fragment -->
    <fragment
        android:id="@+id/privacy_policy_fragment"
        android:name="ch.heuscher.ad2cause.ui.screens.PrivacyPolicyFragment"
        android:label="@string/privacy_policy"
        tools:layout="@layout/fragment_privacy_policy" />

    <!-- Sign-In Fragment -->
    <fragment
        android:id="@+id/sign_in_fragment"
        android:name="ch.heuscher.ad2cause.ui.screens.SignInFragment"
        android:label="@string/sign_in"
        tools:layout="@layout/fragment_sign_in" />

</navigation>
